// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterTest renders 1`] = `
<div
  className="container"
>
  <div
    className="cardContainer"
  >
    <div
      className="stackBase"
    >
      <div>
        <div
          className="animationContainer"
        >
          <div
            className="touchArea"
            style={
              Object {
                "left": "0px",
                "top": "0px",
                "transform": "rotate(0deg)",
              }
            }
          >
            <span
              className="container card"
            >
              <span
                className="character"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttonContainer"
  >
    <button
      className="button button undoButton"
      onClick={[Function]}
    >
      <span
        className="span span--small undoIcon buttonIcon"
      >
        <svg
          className="svg"
          viewBox="0 0 511.63 511.631"
        >
          <use
            xlinkHref="undo.svg#main"
          />
        </svg>
      </span>
    </button>
    <button
      className="button button"
      onClick={[Function]}
    >
      <span
        className="span span--small searchIcon buttonIcon"
      >
        <svg
          className="svg"
          viewBox="0 0 250.313 250.313"
        >
          <use
            xlinkHref="search.svg#main"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`CharacterTest renders an empty card 1`] = `
<div
  className="container"
>
  <div
    className="cardContainer"
  >
    <div
      className="stackBase"
    >
      <div />
    </div>
  </div>
  <div
    className="buttonContainer"
  >
    <button
      className="button button undoButton"
      onClick={[Function]}
    >
      <span
        className="span span--small undoIcon buttonIcon"
      >
        <svg
          className="svg"
          viewBox="0 0 511.63 511.631"
        >
          <use
            xlinkHref="undo.svg#main"
          />
        </svg>
      </span>
    </button>
    <button
      className="button button"
      onClick={[Function]}
    >
      <span
        className="span span--small searchIcon buttonIcon"
      >
        <svg
          className="svg"
          viewBox="0 0 250.313 250.313"
        >
          <use
            xlinkHref="search.svg#main"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
